-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7
-
None
-
Fedora 39, KDE Plasma
-
6db942a87 (dev), e824eaf86 (6.7)
Originally reported as https://bugs.kde.org/show_bug.cgi?id=479816
The following code snippet, running with qml(scene) opens a second window with Qt 6.6 but doesn't with Qt 6.7
import QtQuick Item { property Item newStuffDialog: Loader { onLoaded: { console.warn("loaded", status) item.visible = true } sourceComponent: Window { width: 400 height: 400 Rectangle { anchors.fill: parent color: "red" } } } }
tested on both wayland and xcb. qtbase commit be67204568328952ca6b5cbbbe03ff9653f2d465, qtdeclarative commit 77e3cc7b36e9bc31208fd957562b6a0cc8b70fb5
| For Gerrit Dashboard: QTBUG-121197 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 543887,4 | doc: Clarify that automatic transient parent relies on visual parent | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 545870,2 | doc: Clarify that automatic transient parent relies on visual parent | 6.7 | qt/qtdeclarative | Status: MERGED | +2 | 0 |